--- a/style.css
+++ b/style.css
@@ -10,8 +10,15 @@ html {
     height: 100vh;
 }
 
+body {
+    background-image: url(./imgens/amanda/fundo.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .logo{
-    width: 20%;
+    width: 30%;
     justify-content: first baseline;
     align-items: center;
     float: left;
@@ -20,8 +27,8 @@ html {
 .logo h1 {
     font-size: 5rem;
     max-width: 100%;
-    margin-left: 15px;
-    margin-top: 15px;
+    margin-left: 85px;
+    margin-top: 30px;
 }
 
 .text  {
@@ -37,7 +44,7 @@ html {
 
 nav {
     float: right;
-    width: 80%;
+    width: 70%;
     margin-top: 6rem;
     
 
@@ -56,6 +63,10 @@ nav ul li {
 }
 
 nav ul li a {
+    color: #01240b;
     text-decoration: none;  
-    font-size: 1.8rem;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    cursor: pointer;
 }
