--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-image: url(./imgens/amanda/fundo.jpg);
+    background-image: url(./img/fundo.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,10 +37,22 @@ body {
 
 }
 
-.text div {
+.text .sub-text {
     max-width: 100%;
-    
+    background-color: rgba(102, 222, 255, 0.1);
+    backdrop-filter: blur(2px);
+    position: relative;
+    width: 350px;
+    height: 400px;
+    top: 180px;
+    left: 80px;  
+    background: transparent;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 38px 0px rgba(0, 0, 0, 0.72);
 }
+
+
 
 nav {
     float: right;
