--- a/style.css
+++ b/style.css
@@ -185,3 +185,21 @@ nav a:hover {
 nav a:hover:after {
     width: 100%;
 }
+
+footer {
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    background-color: white;
+    width: 90%;
+    height: 30%;
+    position: absolute;
+    top: 644px;
+    left: 90px;
+    justify-content: ;
+    display: flex;
+    
+
+}
