--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ cor secundaria de destaque - #FF9A13
 
 html {
     font-size: 62.5%;
-    width: 100vw;
-    height: 100vh;
+    width: 98vw;
+    height: 98vh;
 }
 
 /*body {
@@ -33,6 +33,8 @@ body {
     background-color: #4D006B;
     color: #FFF2FB;
 }
+
+
 .logo{
     width: 30%;
     justify-content: first baseline;
@@ -47,98 +49,10 @@ body {
     margin-top: 30px;
 }
 
-.text  {
-    width: 50%;
-    float: right;
-}
-
-.sub-text {
-    display: block;
-    max-width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.tx {
-    height: 14rem;
-   position: relative;
-   top: 190px;
-   left: 20px;
-   border-left: #FF9A13 solid 3px;
-   border-radius: 5px;
-}
-
-.tx h2 {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 8rem;
-    font-weight: 400;
-}
-
-.tx h4 {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 4rem;
-    font-weight: 300;
-}
-
-.tx p {
-    position: relative;
-    top: -0.7rem;
-   left: -0.5rem;
-    margin-left: 35px;
-}
-
-.btn {
-    position: relative;
-    top: 25.5rem;
-    left: 5.5rem;
-    background-color: #FFF2FB;
-    color: #4D006B;
-    font-family: 'Nunito Sans', sans-serif;
-    border: #FFF2FB solid 1.1px;
-    border-radius: 15px;
-    cursor: pointer;
-    outline:#FFF2FB solid 1.1px;
-    outline-offset: -1.1px;
-}
-
-.btn:hover {
-    background-color: #4D006B;
-    color: #FFF2FB;
-    outline-color: #FF9A13;
-}
-
-.btn p {
-    font-size: 2rem;
-    margin: 3px 35px 3px 35px;
-}
-
-
-/*
-.text .sub-text {
-    max-width: 100%;
-    background-color: #FFF2FB;
-    backdrop-filter: blur(2px);
-    position: relative;
-    width: 350px;
-    height: 400px;
-    top: 180px;
-    left: 80px;  
-    background: transparent;
-    border: 1px solid #fff;
-    border-radius: 15px;
-    box-shadow: 5px 5px 38px 0px rgba(0, 0, 0, 0.72);
-}
-*/
-
-
-
-
 nav {
     float: right;
     width: 70%;
     margin-top: 6rem;
-    
-
 }
 
 nav ul {
@@ -186,20 +100,128 @@ nav a:hover:after {
     width: 100%;
 }
 
+.text  {
+    width: 100%;
+    flex-shrink: 1;
+
+}
+
+.sub-text {
+    display: block;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.tx {
+    height: 14rem;
+   position: relative;
+   top: 300px;
+   left: 1024px;
+   border-left: #FF9A13 solid 3px;
+   border-radius: 5px;
+}
+
+.tx h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 8rem;
+    font-weight: 400;
+}
+
+.tx h4 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 4rem;
+    font-weight: 300;
+}
+
+.tx p {
+    position: relative;
+    top: -8.7rem;
+   left: -51.1rem;
+    margin-left: 562px;
+}
+
+.btn {
+    position: relative;
+    top: 34.5rem;
+    left: 108rem;
+    background-color: #FFF2FB;
+    color: #4D006B;
+    font-family: 'Nunito Sans', sans-serif;
+    border: #FFF2FB solid 1.1px;
+    border-radius: 15px;
+    cursor: pointer;
+    outline:#FFF2FB solid 1.1px;
+    outline-offset: -1.1px;
+}
+
+.btn:hover {
+    background-color: #4D006B;
+    color: #FFF2FB;
+    outline-color: #FF9A13;
+}
+
+.btn p {
+    font-size: 2rem;
+    margin: 3px 35px 3px 35px;
+}
+
+
+/*
+.text .sub-text {
+    max-width: 100%;
+    background-color: #FFF2FB;
+    backdrop-filter: blur(2px);
+    position: relative;
+    width: 350px;
+    height: 400px;
+    top: 180px;
+    left: 80px;  
+    background: transparent;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 38px 0px rgba(0, 0, 0, 0.72);
+}
+*/
+
+
+
+
+
+
 footer {
     justify-content: center;
     align-items: center;
 }
 
 .container {
-    background-color: white;
-    width: 90%;
-    height: 30%;
+    background-color: #4D006B;
+    width: 171rem;
+    height: 10rem;
     position: absolute;
     top: 644px;
     left: 90px;
-    justify-content: ;
-    display: flex;
+    display: inline-flex;
+    justify-content: space-between;
     
 
+   
+}
+
+.card {
+    background-color: darkred;
+    width: 450px;
+    height: 27.6rem;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 2px 2px 2px rgba(170, 255, 170, 0.7);
+    margin-top: 15px;
+}
+
+.sub-card {
+    background-color: yellow;
+    margin-top: 76px;
+    width: 450px;
+    height: 20rem;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 2px 2px 2px rgba(170, 255, 170, 0.7)
 }
