--- a/css/style.css
+++ b/css/style.css
@@ -49,4 +49,17 @@ nav ul li a{
     color: rgb(41, 41, 68);
 }
 
+.container {
+    position: absolute;
+    top: 25rem;
+    background: url(../imagens/imagem2.jpg);
+    max-width: 100%;
+    height: 50rem;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(to right hsl(100, 100 100, 0.65));
+    ;
+}
+
 
