--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 html {
     box-sizing: border-box;
     margin: 0;
@@ -44,9 +44,36 @@ nav ul {
 }
 
 nav ul li a{
+    color: #143e4a;
     text-decoration: none;
     font-size: 1.8rem;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
     color: rgb(41, 41, 68);
+}
+
+nav ul li button {
+    color: #143e4a;
+    background: transparent;
+    width: 40px;
+    height: 40px;
+    border: none;
+    
+}
+
+.active {
+    color: #143e4a;
+    font-size: 2rem;
+}
+
+button i {
+    font-size: 2rem;
+    padding-bottom: 1rem;
+    
+}
+
+button i:hover {
+    font-size: 2.5rem;
 }
 
 .container {
@@ -58,8 +85,63 @@ nav ul li a{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: linear-gradient(to right hsl(100, 100 100, 0.65));
-    ;
+    opacity: 0.4; 
+    overflow: hidden;
 }
+
+.card {
+    position: relative;
+    top: 18rem;
+    left: 17rem;
+    width: 35%;
+    background: transparent;
+    border: none;
+  
+
+}
+
+.card h1 {
+    font-size: 8rem;
+    font-weight: 400;
+    font-family: 'Oswald', sans-serif;
+}
+
+.card h2 {
+    font-size: 1.8;
+    font-weight: 400;
+}
+
+.text {
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 5rem;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+}
+
+.btn {
+	background-color: rgb(22, 70, 118);
+    font-size: 1.8rem;
+    font-weight: 600;
+    width: 13rem;
+    height: 4.5rem;
+	color: hsl(31, 77%, 52%);
+	outline: 2px solid hsl(0, 0%, 95%);
+ 	outline-offset: -2px;
+    border-radius: 25px;
+    margin-top: 3rem;
+}
+
+.btn:hover {
+	color: rgb(212, 212, 212);
+	background-color: hsl(31, 77%, 52%);
+	outline: 2px solid rgb(212, 212, 212);
+ 	outline-offset: -2px;
+}
+
+.card2 {
+
+}
+
 
 
