--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,17 @@ html {
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    height: 100vh;
+    height: 200vh;
     width: 100vw;
+    
 }
+
+
 
 body {
     background-image: linear-gradient(to bottom, #fd0202 -60%, #FDC7F1 50%);
 }
+
 
 header {
     display: inline-flex;
@@ -24,14 +28,26 @@ aside {
     max-height: 100%;
 }
 
+.logo {
+    position: relative;
+    top: 3.2rem;
+    left: 17rem;
+    width: 7rem;
+    height: 7rem;
+    opacity: 0.6;
+
+}
+
 aside h4 {
-    margin: 2.5rem 0rem 6rem 17rem;
+    position: absolute;
+    margin: -3rem 0rem 6rem 20rem;
     font-size: 6rem;
     font-family: 'The Nautigal', cursive;
 }
 
 nav {
     width: 70%;
+
 }
 
 nav ul {
@@ -75,9 +91,12 @@ nav ul li button {
     
 }
 
-.active {
+
+.activa {
     font-size: 2rem;
 }
+
+
 
 button i {
     font-size: 2rem;
@@ -91,39 +110,64 @@ button i:hover {
 
 .container {
     position: absolute;
-    top: 25rem;
+    top: 20rem;
     background: url(../imagens/imagem2.jpg);
     max-width: 100%;
-    height: 50rem;
+    height: 60rem;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.4; 
+    filter: drop-shadow(10px 2px 10px #000000);
     
 }
 
 .card {
     position: relative;
-    top: 18rem;
+    top: 14rem;
     left: 17rem;
     width: 35%;
     background: transparent;
     border: none;
     float: left;
-  
+}
 
+#traco {
+    background-color: #ff1f1f;
+    position: absolute;
+    top: 1.5rem ;
+    left: 0;
+    width: 7px;
+    height: 143px;
+    border-radius: 2px;
+
+}
+
+.logo2 {
+    position: absolute;
+    top: -3rem;
+    left: -2rem;
+    width: 15rem;
+    height: 15rem;
+    opacity: 0.9;
 }
 
 .card h1 {
-    font-size: 8rem;
-    font-weight: 400;
+    color: rgb(255, 253, 236);
+    margin-left: 2rem;
+    font-size: 10rem;
+    font-weight: 500;
     font-family: 'Oswald', sans-serif;
+    filter: drop-shadow(2px 2px 2px #000000);
 }
 
 .card h2 {
-    font-size: 1.8;
+    margin-left: 2rem;
+    font-size: 3rem;
     font-weight: 400;
 }
+
+
 
 .text {
     max-width: 100%;
@@ -153,18 +197,16 @@ button i:hover {
  	outline-offset: -2px;
 }
 
-.card2 {
+.card2{
     position: relative;
     top: 11rem;
-    right: 17rem;
-    
+    right: 17rem;   
     width: 80rem;
     height: 50rem;
     float: right;
-    display: flex;
-    flex-direction: column;
-
 }
+
+
 
 
 
