--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -2,40 +2,57 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 62.5%;
 }
 
-html {
+body {
+    font-size: 62.5%;
     width: 100vw;
     height: 100vh;
 }
 
+.fundo {
+    height: 100%;
+    background-image: linear-gradient(45deg, #ab4040, #4086a9 50%);
+    text-align: center;
+}
 
 .calc {
+    background-color: black;
+    width: 15rem;
+    height: 23.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: aqua;
-    width: 30rem;
-    height: 40rem;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+    padding: 1rem;
+    
 }
 
-#resultado {
+.calc h1 {
     position: relative;
-    background-color: white;
-    border: black solid 1px;
-    width: 20rem;
-    height: 5rem;
-    font-size: 5rem;
-    
+    color: aliceblue;
+    margin-bottom: 0.5rem;
 }
 
-.tabela button {
-    width: 70px;
-    height: 60px;
-    
+.calc p {
+    background-color: aliceblue;
+    height: 2rem;
+    margin-bottom: 1rem;
+    text-align: end;
+    padding: 0.2rem;
+    font-size: 1.3rem;
+    border-radius: 5px;
 }
 
+.btn {
+    position: relative;
+    width: 3rem;
+    height: 3rem;
+    margin: 0.1rem;
+    border-radius: 5px;
+}
 
-
+#btn {
+    height: 6.4rem;
+}
