--- a/psi/css/style.css
+++ b/psi/css/style.css
@@ -91,6 +91,12 @@ nav ul li button {
     
 }
 
+.figura img {
+    position: relative;
+    width: 25rem;
+}
+
+
 
 .activa {
     font-size: 2rem;
@@ -110,7 +116,7 @@ button i:hover {
 
 .container {
     position: absolute;
-    top: 20rem;
+    top: 18rem;
     background: url(../imagens/imagem2.jpg);
     max-width: 100%;
     height: 60rem;
@@ -206,6 +212,45 @@ button i:hover {
     float: right;
 }
 
+.main2 {
+    display: flex;
+    position: absolute;
+    top: 82rem;
+    left: 17rem;
+}
+
+.main2 h1 span {
+    display: none;
+}
+
+.m2s2 {
+    position: relative;
+    top: 10rem;
+    width: 150rem;
+    height: 90rem;
+    background-color: #002e5a;
+    border-radius: 10px  80px;
+    background-image: linear-gradient(to left, #124863 10%, #FDC7F1 100%);
+    
+}
+
+.img {
+    position: relative;
+    left: 100rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    width: 40rem;
+    height: 25rem;
+    overflow: hidden;
+    border-radius: 1rem;
+}
+
+.pic {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 
 
